Buttons to edit and remove missions

--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -2,4 +2,11 @@
   <td><%= mission.purpose_of_life %></td>
   <td><%= mission.who_am_i %></td>
   <td><%= mission.why_exist %></td>
+  <td><%= link_to "Editar", edit_mission_path(mission),
+          class:"btn btn-default"
+          %></td>
+  <td><%= link_to "Remover", mission, method: :delete,
+          class:"btn btn-danger",
+          data: {confirm: "Tem certeza que deseja remover essa missão? #{mission.purpose_of_life}" }
+          %></td>
 </tr>
