Adding data to missions

--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="form-group">
-        <%= form.label "Qual o seu propósito de vida?" %>
+        <%= form.label "Qual o meu propósito de vida?" %>
         <%= form.text_field :purpose_of_life, class:"form-control" %>
       </div>
     </div>
@@ -11,7 +11,7 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="form-group">
-        <%= form.label "Quem é você" %>
+        <%= form.label "Quem sou eu?" %>
         <%= form.text_area :who_am_i, class:"form-control", rows: 4 %>
       </div>
     </div>
@@ -20,7 +20,7 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="form-group">
-        <%= form.label "Por que existe?" %>
+        <%= form.label "Por que existo?" %>
         <%= form.text_field :why_exist, class:"form-control" %>
       </div>
     </div>
