--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -4,6 +4,7 @@
       <td>Propósito de vida</td>
       <td>Quem sou eu</td>
       <td>Por que existo</td>
+      <td>Data</td>
     </tr>
   </thead>
   <tbody>
