--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -1,3 +1,9 @@
+<% @mission.errors.full_messages.each do |msg| %>
+  <div class="alert alert-danger" role="alert">
+    <%= msg %>
+  </div>
+<% end %>
+
 <%= form_for @mission do |form| %>
   <div class="row">
     <div class="col-sm-8">
