--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,3 +1,9 @@
+<% if flash[:notice] %>
+  <div class="alert alert-success" role="alert">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
+
 <table class="table table-bordered table-hover">
   <thead>
     <tr>
