Adding attribute plan_id to missions and selecting mission

--- a/app/views/missions/_form.html.erb
+++ b/app/views/missions/_form.html.erb
@@ -32,5 +32,7 @@
     </div>
   </div>
 
+  <%= hidden_field_tag "plan_id", "1"  %>
+
   <%= form.submit texto_da_acao, class:"btn btn-primary" %>
 <% end %>
