--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,9 @@
   <body>
     <%= nav_bar brand: "LTR", brand_link: root_url, responsive: true do %>
       <%= menu_group do %>
+        <%= menu_item "Planos", plans_path %>
         <%= menu_item "Nova Missao", new_mission_path %>
+        <%= menu_item "Missoes", missions_path %>
       <% end %>
     <% end %>
     <div class="container">
