--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -4,6 +4,9 @@
   <td><%= mission.why_exist %></td>
   <td><%= mission.created_at.strftime("%d/%m/%Y") %></td>
 
+  <td><%= link_to "Selecionar", plans_update_selected_mission_path(mission.id),
+                  class:"btn btn-primary"
+          %></td>
   <td><%= link_to "Editar", edit_mission_path(mission),
           class:"btn btn-default"
           %></td>
