--- a/app/views/plans/index.html.erb
+++ b/app/views/plans/index.html.erb
@@ -1,15 +1,17 @@
-<p id="notice"><%= notice %></p>
+<% if flash[:notice] %>
+  <div class="alert alert-success" role="alert">
+    <%= flash[:notice] %>
+  </div>
+<% end %>
 
-<h1>Plans</h1>
-
-<table>
+<table class="table table-bordered table-hover">
   <thead>
     <tr>
-      <th>Life objective</th>
-      <th>Selected mission</th>
-      <th>Selected vision</th>
-      <th>Critical success factors selected</th>
-      <th colspan="3"></th>
+      <td>Objetivo de vida</td>
+      <td>Missão selecionada</td>
+      <td>Visão selecionada</td>
+      <td>Fator Crítico de Sucesso selecionado</td>
+      <td>Data</td>
     </tr>
   </thead>
 
@@ -20,9 +22,9 @@
         <td><%= plan.selected_mission %></td>
         <td><%= plan.selected_vision %></td>
         <td><%= plan.critical_success_factors_selected %></td>
-        <td><%= link_to 'Show', plan %></td>
-        <td><%= link_to 'Edit', edit_plan_path(plan) %></td>
-        <td><%= link_to 'Destroy', plan, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= plan.created_at.strftime("%d/%m/%Y") %></td>
+        <td><%= link_to "Editar", edit_plan_path(plan), class:"btn btn-default"  %></td>
+        <td><%= link_to "Remover", plan, method: :delete, class:"btn btn-danger", data: { confirm: "Tem certeza que deseja remover o plano #{plan.id}?" } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -30,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Plan', new_plan_path %>
+<%= link_to "Novo plano", new_plan_path, class: "btn btn-primary" %>
