--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Plan</h1>
-
 <%= render 'form', plan: @plan %>
 
-<%= link_to 'Back', plans_path %>
+<%= link_to 'Voltar', plans_path, class:"btn btn-default" %>
