--- a/app/views/plans/edit.html.erb
+++ b/app/views/plans/edit.html.erb
@@ -1,6 +1,3 @@
-<h1>Editing Plan</h1>
-
 <%= render 'form', plan: @plan %>
 
-<%= link_to 'Show', @plan %> |
-<%= link_to 'Back', plans_path %>
+<%= link_to 'Voltar', plans_path, class:"btn btn-btn-default" %>
