--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,68 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<h2>Editar usuário</h2>
+<hr/>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {method: :put}) do |form| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="form-group">
+        <%= form.label "E-mail" %><br/>
+        <%= form.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="form-group">
+        <%= form.label "Nome" %><br/>
+        <%= form.text_field :name, autofocus: true, autocomplete: "name", class: "form-control" %>
+      </div>
+    </div>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="form-group">
+        <%= form.label "Senha"%> <i>(Deixe em branco se não quiser mudar)</i><br/>
+        <%= form.password_field :password, autocomplete: "new-password", class: "form-control" %>
+        <% if @minimum_password_length %>
+          <em><%= @minimum_password_length %> caracteres no mínimo</em>
+        <% end %>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="form-group">
+        <%= form.label "Confirmação de senha" %><br/>
+        <%= form.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+      </div>
+    </div>
   </div>
 
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="form-group">
+        <%= form.label "Senha atual" %> <i>(precisamos da sua senha atual para confirmar mudanças)</i><br/>
+        <%= form.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
+      </div>
+    </div>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+  <%= form.submit "Atualizar", class:"btn btn-primary btn-margin-bottom" %>
+
 <% end %>
 
-<h3>Cancel my account</h3>
+<h2>Cancelar minha conta</h2>
+<hr/>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Não gostou do Life to Remind? <%= button_to "Cancelar minha conta", registration_path(resource_name), data: {confirm: "Are you sure?"}, method: :delete, class:"btn btn-danger btn-margin-bottom" %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "Voltar", :back, class:"btn btn-default btn-margin-bottom" %>
