Creating MyPlan page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 <body>
 <%= nav_bar brand: "LTR", brand_link: root_url, responsive: true do %>
   <%= menu_group do %>
+    <%= menu_item "Meu Planejamento", myplan_path %>
     <%= menu_item "Planos", plans_path %>
     <%= menu_item "Missoes", missions_path %>
 
