Changing views to show plan an my plan

--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -1,10 +1,12 @@
-<h1>Meu Planejamento</h1>
+<h2>Matriz SWOT</h2>
 <hr/>
 
-<b>Objetivo de vida</b>
+<h3>Objetivo de vida</h3>
+<hr/>
 <%= "#{@current_plan.life_objective}" %>
-</br>
-<b>Missão</b>
+
+<h3>Missão</h3>
+<hr/>
 <p>Propósito de Vida</p>
 <%= "#{@my_mission.purpose_of_life}" %>
 <p>Quem sou eu</p>
