Adding strengths to myplan

--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -1,6 +1,8 @@
 <h2>Matriz SWOT</h2>
 <hr/>
 
+<%= render template: "plans/swot" %>
+
 <h3>Objetivo de vida</h3>
 <hr/>
 <%= "#{@current_plan.life_objective}" %>
