--- a/app/views/plans/swot.html.erb
+++ b/app/views/plans/swot.html.erb
@@ -1,4 +1,5 @@
 <%= form_tag swotparts_create_swot_swotpart_path do %>
+  <%= hidden_field_tag :partname, "strength" %>
   <div class="row">
     <div class="col-xs-2">
       <div class="row">
@@ -13,12 +14,39 @@
   </div>
 <% end %>
 <div class="container">
-  <% @swotparts.each do |swotpart| %>
+  <% @strengths.each do |strength| %>
     <div class="col-xs-2">
       <div class="row">
-        <%= swotpart.name.truncate(15) %></p>
-        <%= link_to "Editar", edit_swotpart_path(swotpart), :class => "btn btn-primary" %>
-        <%= link_to "X", swotpart, method: :delete, :class => "btn btn-danger" %>
+        <%= strength.name.truncate(15) %></p>
+        <%= link_to "Editar", edit_swotpart_path(strength), :class => "btn btn-primary" %>
+        <%= link_to "X", strength, method: :delete, :class => "btn btn-danger" %>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+<%= form_tag swotparts_create_swot_swotpart_path do %>
+  <%= hidden_field_tag :partname, "weak" %>
+  <div class="row">
+    <div class="col-xs-2">
+      <div class="row">
+        <%= text_field_tag :name, "", class: "form-control" %>
+      </div>
+    </div>
+    <div class="col-xs-2">
+      <div class="row">
+        <%= submit_tag "+Fraqueza", class: "btn btn-success" %>
+      </div>
+    </div>
+  </div>
+<% end %>
+<div class="container">
+  <% @weaks.each do |weak| %>
+    <div class="col-xs-2">
+      <div class="row">
+        <%= weak.name.truncate(15) %></p>
+        <%= link_to "Editar", edit_swotpart_path(weak), :class => "btn btn-primary" %>
+        <%= link_to "X", weak, method: :delete, :class => "btn btn-danger" %>
       </div>
     </div>
   <% end %>
