--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,50 @@
   <% if alert %>
     <p class="alert alert-danger"><%= alert %></p>
   <% end %>
+
   <%= yield %>
+</div>
+
+<div id="page-container">
+  <div id="content-wrap">
+    <div class="footer">
+      <div class="contain">
+        <div class="col">
+          <h1>O projeto</h1>
+          <ul>
+            <li>Sobre</li>
+            <li>Nossa missão</li>
+            <li>Serviços</li>
+            <li>Mapa do site</li>
+          </ul>
+        </div>
+        <div class="col">
+          <h1>Quem somos</h1>
+          <ul>
+            <li></li>
+            <li>Criadores</li>
+            <li>A Universidade</li>
+          </ul>
+        </div>
+        <div class="col">
+          <h1>Suporte</h1>
+          <ul>
+            <li>Entre em contato</li>
+            <li>Deixe uma sugestão</li>
+          </ul>
+        </div>
+        <div class="col social">
+          <h1>Social</h1>
+          <ul>
+            <li><img src="https://svgshare.com/i/5fq.svg" width="32" style="width: 32px;"></li>
+            <li><img src="https://svgshare.com/i/Cri.svg" width="32" style="width: 32px;"></li>
+            <li><img src="https://svgshare.com/i/5f_.svg" width="32" style="width: 32px;"></li>
+          </ul>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
