--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,79 +10,17 @@
 </head>
 
 <body>
-<%= nav_bar brand: "LTR", brand_link: root_url, responsive: true do %>
-  <%= menu_group do %>
-    <%= menu_item "Meu Planejamento", myplan_path %>
-    <%= menu_item "Planos", plans_path %>
-    <%= menu_item "Missoes", missions_path %>
 
-  <% end %>
-  <%= menu_group pull: :right do %>
-    <% if current_user %>
-      <%= menu_item "Olá #{current_user.email}", edit_user_registration_path %>
-      <%= menu_item "Sair", destroy_user_session_path, :method => :delete %>
-    <% else %>
-      <%= menu_item "Entrar", new_user_session_path %>
-      <%= menu_item "Cadastrar", new_user_registration_path %>
-    <% end %>
-  <% end %>
-<% end %>
+<%= render "layouts/header" unless @disable_nav %>
+
+<%= render "layouts/notice" %>
 
 <div class="container">
-  <% if flash[:notice] %>
-    <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
-  <% end %>
-  <% if flash[:info] %>
-    <div class="alert alert-info" role="alert"><%= flash[:info] %></div>
-  <% end %>
-  <% if alert %>
-    <p class="alert alert-danger"><%= alert %></p>
-  <% end %>
-
   <%= yield %>
 </div>
 
-<div id="page-container">
-  <div id="content-wrap">
-    <div class="footer">
-      <div class="contain">
-        <div class="col">
-          <h1>O projeto</h1>
-          <ul>
-            <li>Sobre</li>
-            <li>Nossa missão</li>
-            <li>Serviços</li>
-            <li>Mapa do site</li>
-          </ul>
-        </div>
-        <div class="col">
-          <h1>Quem somos</h1>
-          <ul>
-            <li></li>
-            <li>Criadores</li>
-            <li>A Universidade</li>
-          </ul>
-        </div>
-        <div class="col">
-          <h1>Suporte</h1>
-          <ul>
-            <li>Entre em contato</li>
-            <li>Deixe uma sugestão</li>
-          </ul>
-        </div>
-        <div class="col social">
-          <h1>Social</h1>
-          <ul>
-            <li><img src="https://svgshare.com/i/5fq.svg" width="32" style="width: 32px;"></li>
-            <li><img src="https://svgshare.com/i/Cri.svg" width="32" style="width: 32px;"></li>
-            <li><img src="https://svgshare.com/i/5f_.svg" width="32" style="width: 32px;"></li>
-          </ul>
-        </div>
-        <div class="clearfix"></div>
-      </div>
-    </div>
-  </div>
-</div>
+<%= render "layouts/footer" unless @disable_footer %>
+
 </body>
 </html>
 
