--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,7 +12,12 @@
  *
  *= require_tree .
  *= require_self
+ *= require theme/animate.min
+ *= require theme/bootstrap.min
+ *= require theme/font-awesome.min
+ *= require theme/templatemo-style
  */
+
 
 /* STYLES SPECIFIC TO FOOTER  */
 .footer {
