--- a/app/views/missions/index.html.erb
+++ b/app/views/missions/index.html.erb
@@ -1,15 +1,17 @@
-<table class="table table-bordered table-hover">
-  <thead>
+<div class="container">
+  <table class="table table-bordered table-hover">
+    <thead>
     <tr>
       <td>Propósito de vida</td>
       <td>Quem sou eu</td>
       <td>Por que existo</td>
       <td>Data</td>
     </tr>
-  </thead>
-  <tbody>
+    </thead>
+    <tbody>
     <%= render @missions %>
-  </tbody>
-</table>
+    </tbody>
+  </table>
 
-<%= link_to "Nova Missão", new_mission_path, class: "btn btn-primary" %>
+  <%= link_to "Nova Missão", new_mission_path, class: "btn btn-primary" %>
+</div>
