--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -1,17 +1,19 @@
-<h2>Matriz SWOT</h2>
-<hr/>
+<div class="container">
+  <h2>Matriz SWOT</h2>
+  <hr/>
 
-<%= render template: "plans/swot" %>
+  <%= render template: "plans/swot" %>
 
-<h3>Objetivo de vida</h3>
-<hr/>
-<%= "#{@current_plan.life_objective}" %>
+  <h3>Objetivo de vida</h3>
+  <hr/>
+  <%= "#{@current_plan.life_objective}" %>
 
-<h3>Missão</h3>
-<hr/>
-<p>Propósito de Vida</p>
-<%= "#{@my_mission.purpose_of_life}" %>
-<p>Quem sou eu</p>
-<%= "#{@my_mission.who_am_i}" %>
-<p>Porque existo</p>
-<%= "#{@my_mission.why_exist}" %>
+  <h3>Missão</h3>
+  <hr/>
+  <p>Propósito de Vida</p>
+  <%= "#{@my_mission.purpose_of_life}" %>
+  <p>Quem sou eu</p>
+  <%= "#{@my_mission.who_am_i}" %>
+  <p>Porque existo</p>
+  <%= "#{@my_mission.why_exist}" %>
+</div>
