Fixing links and navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
 <body>
 
-<%= render "layouts/header" unless @disable_nav %>
+<%= render "layouts/navbar" unless @disable_nav %>
 
 <%= render "layouts/notice" %>
 
