--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,30 +14,7 @@
 
 <!-- %= render "headertemplate" % -->
 
-<!-- start navigation -->
-<nav class="navbar navbar-default templatemo-nav" role="navigation">
-  <div class="container">
-    <div class="navbar-header">
-      <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="icon icon-bar"></span>
-        <span class="icon icon-bar"></span>
-        <span class="icon icon-bar"></span>
-      </button>
-      <a href="#" class="navbar-brand">LTR</a>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#top">HOME</a></li>
-        <li><a href="#about">ABOUT</a></li>
-        <li><a href="#team">TEAM</a></li>
-        <li><a href="#service">SERVICE</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#contact">CONTACT</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-<!-- end navigation -->
+<%= render "navbarlanding" %>
 
 <!-- start home -->
 <section id="home">
