--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -21,13 +21,14 @@
   <div class="container">
     <div class="row">
       <div class="col-md-offset-2 col-md-8">
-        <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">We make templates that are <span>awesome</span></h1>
+        <h1 class="wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">Life to <span>Remind</span></h1>
         <div class="element">
-          <div class="sub-element">Hello, this is Typed.js</div>
-          <div class="sub-element">Awesome Template is provided by templatemo.com website for everyone</div>
-          <div class="sub-element">Download, edit and apply this awesome template for your websites</div>
+          <div class="sub-element">Life To Remind</div>
+          <div class="sub-element">Planeje sua vida</div>
+          <div class="sub-element">Alcance objetivos</div>
         </div>
-        <a data-scroll href="#about" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">GET STARTED</a>
+        <!-- a data-scroll href="#about" class="btn btn-default wow fadeInUp" data-wow-offset="50" data-wow-delay="0.6s">COMEÇAR</a -->
+        <%= link_to "COMEÇAR", plans_path, class: "btn btn-default wow fadeInUp", method: "get" %>
       </div>
     </div>
   </div>
@@ -39,7 +40,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">WE ARE <span>AWESOME</span></h2>
+        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">O <span>LTR</span></h2>
       </div>
       <div class="col-md-4 col-sm-4 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="media">
@@ -47,10 +48,10 @@
             <div class="media-object pull-left">
               <i class="fa fa-mobile"></i>
             </div>
-            <h3 class="media-heading">FULLY RESPONSIVE</h3>
+            <h3 class="media-heading">LIFE TO REMIND</h3>
           </div>
           <div class="media-body">
-            <p>Awesome responsive template is provided by <a rel="nofollow" href="http://www.templatemo.com" target="_parent">templatemo</a> website. This is Bootstrap v3.3.2 layout built on HTML5 CSS3. You can use this for any purpose. Please tell your friends about it.</p>
+            <p>Consideramos sua vida muito importante. Faça o planejamento dela no LifeToRemind, acompanhe seus objetivos de vida tanto pessoais, financeiros e profissionais.</p>
           </div>
         </div>
       </div>
@@ -60,10 +61,10 @@
             <div class="media-object pull-left">
               <i class="fa fa-comment-o"></i>
             </div>
-            <h3 class="media-heading">FREE SUPPORT</h3>
+            <h3 class="media-heading">UM PLANO INDIVIDUAL</h3>
           </div>
           <div class="media-body">
-            <p>Credits go to <a rel="nofollow" href="http://pixabay.com">Pixabay</a> for homepage image and <a rel="nofollow" href="http://unsplash.com">Unsplash</a> for portfolio images. Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</p>
+            <p>Conheça mais a si mesmo. Busque entender melhor quem é você, no que é bom, qualidades, fraquezas, ameaças e oportunidades ao seu redor. Além disso, descobrir seu propósito, missão, valores dentre outras características individuais. </p>
           </div>
         </div>
       </div>
@@ -73,10 +74,10 @@
             <div class="media-object pull-left">
               <i class="fa fa-html5"></i>
             </div>
-            <h3 class="media-heading">HTML5 &AMP; CSS3</h3>
+            <h3 class="media-heading">REDIRECIONE SEU CAMINHO</h3>
           </div>
           <div class="media-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. Adipiscing vitae vel quam proin eget mauris eget. Lorem ipsum dolor sit amet.</p>
+            <p>O LifeToRemind te ajuda a lembrar de seguir seu caminho. Objetivos também mudam no decorrer da vida, por que não acompanha-los?.</p>
           </div>
         </div>
       </div>
@@ -85,64 +86,14 @@
 </section>
 <!-- end about -->
 
-<!-- start team -->
-<section id="team">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span>AWESOME</span> TEAM</h2>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
-        <div class="team-wrapper">
-          <img src="/assets/team-img2.jpg" class="img-responsive" alt="team img 1">
-          <div class="team-des">
-            <h4>TRACY</h4>
-            <span>Designer</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molest.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
-        <div class="team-wrapper">
-          <img src="/assets/team-img2.jpg" class="img-responsive" alt="team img 2">
-          <div class="team-des">
-            <h4>MARY</h4>
-            <span>Developer</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molest.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.3s">
-        <div class="team-wrapper">
-          <img src="/assets/team-img2.jpg" class="img-responsive" alt="team img 3">
-          <div class="team-des">
-            <h4>JULIA</h4>
-            <span>Director</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molest.</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="1.6s">
-        <div class="team-wrapper">
-          <img src="/assets/team-img2.jpg" class="img-responsive" alt="team img 4">
-          <div class="team-des">
-            <h4>LINDA</h4>
-            <span>Manager</span>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molest.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- end team -->
+<!-- % render "team" % -->
 
 <!-- start service -->
 <section id="service">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">OUR <span>AWESOME</span> THINGS</h2>
+        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">NOSSOS <span>SERVIÇOS</span></h2>
       </div>
       <div class="col-md-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <i class="fa fa-laptop"></i>
@@ -303,7 +254,7 @@
     <div class="row">
       <div class="col-md-12 text-center">
         <p class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">
-          Copyright &copy; 2084 Company Name</p>
+          Copyright &copy; 2019 Life to Remind</p>
       </div>
     </div>
   </div>
