Changing texts and route after login

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,7 +51,7 @@
             <h3 class="media-heading">LIFE TO REMIND</h3>
           </div>
           <div class="media-body">
-            <p>Consideramos sua vida muito importante. Faça o planejamento dela no LifeToRemind, acompanhe seus objetivos de vida tanto pessoais, financeiros e profissionais.</p>
+            <p>Consideramos sua vida muito importante. Faça o planejamento dela no Life to Remind, acompanhe seus objetivos de vida pessoais, financeiros e profissionais.</p>
           </div>
         </div>
       </div>
@@ -64,7 +64,7 @@
             <h3 class="media-heading">UM PLANO INDIVIDUAL</h3>
           </div>
           <div class="media-body">
-            <p>Conheça mais a si mesmo. Busque entender melhor quem é você, no que é bom, qualidades, fraquezas, ameaças e oportunidades ao seu redor. Além disso, descobrir seu propósito, missão, valores dentre outras características individuais. </p>
+            <p>Conheça mais a si mesmo. Entenda melhor quem é você, no que é bom, forças, fraquezas, oportunidades e ameaças ao seu redor. Além disso, descobra seu propósito de vida, missão, valores dentre outras características individuais.</p>
           </div>
         </div>
       </div>
@@ -77,7 +77,7 @@
             <h3 class="media-heading">REDIRECIONE SEU CAMINHO</h3>
           </div>
           <div class="media-body">
-            <p>O LifeToRemind te ajuda a lembrar de seguir seu caminho. Objetivos também mudam no decorrer da vida, por que não acompanha-los?.</p>
+            <p>O Life to Remind te ajuda a lembrar de seguir seu caminho. Objetivos também podem mudar no decorrer da vida, por que não acompanha-los?</p>
           </div>
         </div>
       </div>
