Updating login and signin pages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,9 @@
  *= require theme/bootstrap.min
  *= require theme/font-awesome.min
  *= require theme/templatemo-style
+ *= require login/mainlogin
+ *= require login/util
+ *= require login/icon-font.min
  */
 
 
